feat: add strict and relaxed record policies
